--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -27,6 +27,10 @@
   margin-left: 50px;
 }
 
+.navbar-wagon-brand-large img {
+  width: 100px;
+}
+
 /* Navbar right section (with form, links, button) */
 .navbar-wagon-right {
   display: flex;
