--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
          <div>
 
             <h1 class='big fadeInRightBig animated'>Academia Translations</h2>
-             <p class='normal fadeInLeftBig animated'> Fast, accurate and reliable translations by experts linguists </p>
+             <p class='normal fadeInLeftBig animated'> Fast, accurate and reliable translations by expert linguists </p>
          </div>
        </div>
 
@@ -22,32 +22,11 @@
                 </p>
               </div>
             </div>
-            <div class='panels-wrapper smaller-container'>
+            <div class='panels-wrapper'>
               <div class='row panels'>
+
                 <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='#'>
-                    <div class='panel-icon'>
-                      <i class='fa fa-certificate icon'></i>
-                    </div>
-                    <div class='panel-body'>
-                      <h3 class='panel-title'> Bespoke and premium service </h3>
-                      <p> You deal directly with a linguist to ensure translations of the highest possible quality </p>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='#'>
-                    <div class='panel-icon'>
-                      <i class='fa fa fa-trophy icon'></i>
-                    </div>
-                    <div class='panel-body'>
-                      <h3 class='panel-title'>The Best of the Best</h3>
-                      <p> Native translators who are members of recognised professional bodies </p>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='#'>
+                  <a class='panel panel-big' href='services.html'>
                     <div class='panel-icon'>
                       <i class='fa fa-check icon'></i>
                     </div>
@@ -58,7 +37,7 @@
                   </a>
                 </div>
                 <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='#'>
+                  <a class='panel panel-big' href='services.html'>
                     <div class='panel-icon'>
                       <i class='fa fa-comment-o icon'></i>
                     </div>
@@ -68,6 +47,28 @@
                     </div>
                   </a>
                 </div>
+
+              <div class='col-sm-6 panel-item'>
+                <a class='panel panel-big' href='services.html'>
+                  <div class='panel-icon'>
+                    <i class='fa fa fa-trophy icon'></i>
+                  </div>
+                  <div class='panel-body'>
+                    <h3 class='panel-title'>The Best of the Best</h3>
+                    <p> Native translators who are members of recognised professional bodies </p>
+                  </div>
+                </a>
+              </div>
+              <div class='col-sm-6 panel-item'>
+                <a class='panel panel-big' href='services.html'>
+                  <div class='panel-icon'>
+                    <i class='fa fa-certificate icon'></i>
+                  </div>
+                  <div class='panel-body'>
+                    <h3 class='panel-title'> Bespoke premium service </h3>
+                    <p> You deal directly with a linguist to ensure the highest quality </p>
+                  </div>
+                </a>
               </div>
             </div>
             <div class='row'>
@@ -105,44 +106,22 @@
                     <div class='carousel-inner'>
                       <div class='item active quote'>
                         <div class='col-sm-12 text-center'>
-                          <p class='lead'>Mauris at ultricies eros. Morbi vel dui nec arcu suscipit euismod. Phasellus pellentesque lectus eget quam ullamcorper consectetur. Vestibulum vitae risus a erat mollis lac in venenatis tellus.</p>
+                          <p class='lead'>Academia Translations has provided the best language consultancy to Respira and we would not hesitate to recommend their services.”.</p>
                           <div class='author-wrapper'>
                             <p class='author'>
-                              <strong>John Doe</strong>,
-                              Company name
+                              <strong>Jordi Fernández</strong>,
+                              Respira
                             </p>
                           </div>
                         </div>
                       </div>
                       <div class='item quote'>
                         <div class='col-sm-12 text-center'>
-                          <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan leo tellus. Nulla fringilla elementum nisl, vitae faucibus risus. Donec ut tristique eros. Curabitur mattis auctor turpis.</p>
+                          <p class='lead'>Since 2012 Academia Translations has been providing translations for the Santander Shareholder department and translates and localises text for the UK, Spanish, Portuguese and Brazilian websites. We are very happy with the professional and reliable service they provide.</p>
                           <div class='author-wrapper'>
                             <p class='author'>
-                              <strong>Michal Marek</strong>,
-                              Bublina Studio
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class='item quote'>
-                        <div class='col-sm-12 text-center'>
-                          <p class='lead'>Aenean lorem quam, dapibus et enim vel, ultrices tincidunt tellus. Donec mattis massa et lacus interdum lobortis. Pellentesque habitant morbi tristique senectus. Curabitur mattis auctor turpis.</p>
-                          <div class='author-wrapper'>
-                            <p class='author'>
-                              <strong>Paľo Delinčák</strong>,
-                              Bublina Studio
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class='item quote'>
-                        <div class='col-sm-12 text-center'>
-                          <p class='lead'>Integer quis placerat leo, sit amet varius odio. Fusce sollicitudin metus eu eros egestas cursus ut ullamcorper augue. Integer blandit tellus a urna semper, sit amet tempor orci ornare. Mauris nec.</p>
-                          <div class='author-wrapper'>
-                            <p class='author'>
-                              <strong>Jane Doe</strong>,
-                              Company name
+                              <strong>Shareholder Department</strong>,
+                              Santander
                             </p>
                           </div>
                         </div>
@@ -151,8 +130,6 @@
                     <ol class='carousel-indicators'>
                       <li class='active' data-slide-to='0' data-target='#carousel-testimonials'></li>
                       <li data-slide-to='1' data-target='#carousel-testimonials'></li>
-                      <li data-slide-to='2' data-target='#carousel-testimonials'></li>
-                      <li data-slide-to='3' data-target='#carousel-testimonials'></li>
                     </ol>
                   </div>
                 </div>
