--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -1,7 +1,7 @@
 
       <div id='main' role='main'>
 
-      <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/blurry.jpg'%>');">
+      <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/blurry.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>800, :dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
         <div>
            <h1 class='big fadeInRightBig animated'>Media</h2>
         </div>
@@ -17,7 +17,7 @@
                 <div class='row'>
                   <div class='col-sm-12'>
                     <p class='lead lead-xs'>
-                   At Academia Translations we are passionate about the past, present and future of languages. Our director, Olivia , is a spokesperson for the Chartered Institute of Linguists and welcomes invitations from the media to discuss any language related topic. <br> <br>
+                   At Academia Translations we are passionate about the past, present and future of languages. Our director, Olivia, is a spokesperson for the Chartered Institute of Linguists and welcomes invitations from the media to discuss any language related topic. <br> <br>
 
                    Appearances to date include:
 
@@ -93,7 +93,7 @@
                           </a>
                         </div>
                         <div class='col-sm-9'>
-                          <p>Following an article in the Telegraph newspaper on the cultural connotations of certain accents, Olivia was spokesperson for the Chartered Institute of Linguists in this interview on sociolinguistics and the place that different accents have in society. </p>
+                          <p>Following an article in the media on the cultural connotations of certain accents, Olivia was spokesperson for the Chartered Institute of Linguists in this interview on sociolinguistics and the place that different accents have in society. </p>
 
                         </div>
                       </div>
@@ -116,7 +116,7 @@
                           </a>
                         </div>
                         <div class='col-sm-9'>
-                          <p>Spanish is one of Latin´s direct descendants and it may be argued that is just an ¨evolved¨ form of Latin with a different name. In this interview with TVE´s programme ¨Saca la Lengua”, Olivia discusses the use of Latin terms in Spanish. </p>
+                          <p>Spanish is one of Latin's direct descendants and it may be argued that is just an ¨evolved¨ form of Latin with a different name. In this interview with TVE´s programme "Saca la Lengua", Olivia discusses the use of Latin terms in Spanish. </p>
 
                         </div>
                       </div>
