--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,15 @@
             <div class='collapse navbar-collapse navbar-header-collapse'>
               <ul class='nav navbar-nav navbar-right'>
                 <li class='dropdown'>
+                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='home.html'>
+                   <a href="/home.html">
+                    <span>
+                      Home
+                    </span>
+                   </a>
+                  </a>
+                </li>
+                <li class='dropdown'>
                   <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='about.html'>
                    <a href="/about.html">
                     <span>
