--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= render 'favicon' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+
+    <!-- for responsive images using claudinary  -->
+    <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
   </head>
   <body>
 
