--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,16 @@
 
+
       <div id='main' role='main'>
 
-        <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/london.jpg'%>');">
+        <!-- <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/london.jpg'%>');"> -->
+
+        <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>1000, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
           <div>
              <h1 class='big fadeInRightBig animated'>About us</h2>
           </div>
         </div>
+
+
 
         <div class='row'>
           <div class='col-sm-12'>
@@ -26,7 +31,7 @@
                     </div>
                     <div class='col-sm-4'>
                       <h3 class='name'>Olivia Cockburn</h3>
-                      <h4 class='position'>Manager Director</h4>
+                      <h4 class='position'>Director</h4>
                       <p> MA, MA, PhD, MCIL, MITI </p>
                       <div class='links'>
                         <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
