--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,7 +1,8 @@
 
 <div id='main' role='main'>
 
-  <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.2) 50%), url('<%= image_path 'at/lamp.jpg'%>');">
+  <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>800, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+
     <div>
        <h1 class='big fadeInRightBig animated'>Services</h2>
     </div>
@@ -97,16 +98,18 @@
         </div>
 
       </div>
-      <div class='row'>
-        <div class='col-sm-12'>
-          <div class='text-center'>
-          </div>
-          <div class='row'>
-            <div class='col-sm-12'>
-              <p class='small-padded text-center'>
-             As Qualified Members of the Institute of Translation and Interpreting and the Chartered Institute of Linguists, our translators can also certify and legalise your translations as required
-              </p>
+      <div class="smaller-container">
+        <div class='row'>
+          <div class='col-sm-12'>
+            <div class='text-center'>
+            </div>
+            <div class='row'>
+              <div class='col-sm-12'>
+                <p style="margin-top:100px" class='text-center'>
+               As Qualified Members of the Institute of Translation and Interpreting and the Chartered Institute of Linguists, our translators can also certify your translations as required. We also work with public notaries to notorise and legalise translations if needed.
+                </p>
 
+              </div>
             </div>
           </div>
         </div>
