--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,17 +2,7 @@
         <div id='footer-main'>
           <div class='container'>
             <div class='row'>
-              <div class='col-md-3 col-sm-6 info-box'>
-                <div class='logo-container'>
-                  <a >
-                    <%= link_to root_path, class: "navbar-wagon-brand padded" do %>
-                      <%= image_tag "at/Academia.png" %>
-                      <% end %>
-                  </a>
-                </div>
-
-              </div>
-              <div class='col-md-3 col-sm-6 info-box'>
+              <div class='col-sm-4 col-sm-push-3 col-md-4 col-md-push-3 info-box'>
                 <h2 class='title'>Contact</h2>
                 <div class='icon-boxes'>
                   <div class='icon-box'>
@@ -41,21 +31,14 @@
                   </div>
                 </div>
               </div>
-              <div class='col-md-3 col-sm-6 info-box'>
-                <h2 class='title'>Newsletter</h2>
-                <p> Subscribe to our newsletter!</p>
-                <form action='index.html' class='form-inline form-validation' method='get'>
-                  <div class='row'>
-                    <div class='form-group control-group col-xs-9 col-md-8 col-lg-9'>
-                      <input class='form-control' data-rule-email='true' data-rule-required='true' id='newsletter_email' name='newsletter[email]' placeholder='Email address' type='email'>
-                    </div>
-                    <div class='col-xs-3 col-md-4 col-lg-3'>
-                      <button class='btn btn-medium-light btn-block' type='submit'>
-                        <i class='fa fa-reply text-white'></i>
-                      </button>
-                    </div>
-                  </div>
-                </form>
+              <div class='col-sm-4 col-sm-push-3 col-md-4 col-md-push-3 info-box'>
+                <div class=''>
+                  <a >
+                    <%= link_to root_path, class: "navbar-wagon-brand-large" do %>
+                      <%= image_tag "at/logo_with_name.png" %>
+                      <% end %>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -65,7 +48,7 @@
             <div class='row'>
               <div class='col-lg-12 clearfix'>
                 <p class='copyright'>
-                  Academia Traslations
+                  Academia Translations
                   &copy;
                   2016
                 </p>
