--- a/app/assets/stylesheets/jednotka/theme/pages/_countdown.scss
+++ b/app/assets/stylesheets/jednotka/theme/pages/_countdown.scss
@@ -21,7 +21,7 @@ html {
 }
 
 body.countdown-page {
-  background: image-url("bg_fullsize.jpg") no-repeat center center fixed;
+  // background: image-url("bg_fullsize.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
