--- a/app/assets/stylesheets/jednotka/theme/structure/_content.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_content.scss
@@ -42,7 +42,7 @@ body {
   background-repeat: no-repeat;
   background-position: center 0;
   // background-image: image-url("dive.jpeg");
-  @include image-2x("bg_wrapper@2x.jpg", 1920px, 535px);
+  // @include image-2x("bg_wrapper@2x.jpg", 1920px, 535px);
 }
 
 #main-content {
