--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <!-- / carousel blur -->
 
 
-       <div class="banner" style="background-image: linear-gradient(210deg, rgba(0,101,168,0.1) 20%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/lights.jpg'%>');">
+       <div class="banner" style="background-image: linear-gradient(210deg, rgba(0,101,168,0.1) 20%, rgba(0,36,61,0.3) 50%), url('<%= cl_image_path("at/lights.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
          <div>
 
             <h1 class='big fadeInRightBig animated'>Academia Translations</h2>
