--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -44,3 +44,10 @@
    padding: 0 !important;
    margin: 0 !important;
 }
+
+
+.small-height {
+
+  height: 30px !important;
+  width: 250px !important;
+}
