--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -98,7 +98,7 @@
         </div>
 
       </div>
-      <div class="smaller-container">
+      <div class="container">
         <div class='row'>
           <div class='col-sm-12'>
             <div class='text-center'>
