--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -24,7 +24,7 @@
                 <div class='col-sm-12 profile-box'>
                   <div class='row'>
                     <div class='col-sm-2 col-sm-offset-4'>
-                      <a class='image-link' data-lightbox data-lightbox-gallery='team' href='mailto:info@academiatranslations.com?Subject=Information%20Request&amp;text=Big+image' title='Olivia Cockburn'>
+                      <a class='image-link' data-lightbox data-lightbox-gallery='team' href='mailto:info@academiatranslations.co.uk?Subject=Information%20Request&amp;text=Big+image' title='Olivia Cockburn'>
                         <i class='fa fa-envelope'></i>
                         <img alt="Olivia Cockburn" width="165" height="165" src="<%= asset_path 'at/olivia.jpg' %>" />
                       </a>
@@ -37,7 +37,7 @@
                         <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
                           <i class='fa fa-linkedin'></i>
                         </a>
-                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:info@academiatranslations.com?Subject=Information%20Request" target="_top">
+                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:info@academiatranslations.co.uk?Subject=Information%20Request" target="_top">
                           <i class='fa fa-envelope'></i>
                         </a>
                       </div>
