more rafa changes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -76,6 +76,65 @@
 
 
 
+
+
+          </div>
+        </div>
+
+
+
+        <div class='row'>
+          <div class='col-sm-12'>
+            <div class='profile-boxes'>
+              <div class='row'>
+                <div class='col-sm-12 profile-box'>
+                  <div class='row'>
+                    <div class='col-sm-2 col-sm-offset-4'>
+                      <a class='image-link' data-lightbox data-lightbox-gallery='team' href='mailto:info@academiatranslations.co.uk?Subject=Information%20Request&amp;text=Big+image' title='Rafael Perez'>
+                        <i class='fa fa-envelope'></i>
+                        <img alt="Rafael Perez" width="165" height="165" src="<%= asset_path 'at/rafa.jpg' %>" />
+                      </a>
+                    </div>
+
+                    <div class='col-sm-4'>
+                      <h3 class='name'>Rafael Perez</h3>
+                      <h4 class='position'>Associate Director</h4>
+                      <p> BSc Hons, CMIOSH </p>
+                      <div class='links'>
+                        <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/rafaelperezechevarria'>
+                          <i class='fa fa-linkedin'></i>
+                        </a>
+                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:info@academiatranslations.co.uk?Subject=Information%20Request" target="_top">
+                          <i class='fa fa-envelope'></i>
+                        </a>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id='main-content'>
+          <div class='container'>
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='row'>
+                  <div class='col-sm-12'>
+                    <p class='lead lead-xs'>
+                    With his background in designing and implementing management systems, Rafa brings a wealth of corporate experience to Academia Translations. A recent addition to our team, Rafa manages our business development and marketing strategy.
+                    </p>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
             <div class='row'>
               <div class='col-sm-12'>
                 <div class='page-header page-header-with-icon'>
@@ -94,6 +153,8 @@
 
           </div>
         </div>
+
+
         <div class='fade' id='scroll-to-top'>
           <i class='fa fa-chevron-up'></i>
         </div>
