--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,12 +18,36 @@
           <div class='container'>
             <div class='row'>
               <div class='col-sm-12'>
-                <p class='lead lead-lg text-center'> Language is our thing. At Academia Translations, we combine the best linguists and experts in your field to protect and project your message.
+                <p class='lead lead-lg text-center'> At Academia Translations, we combine the best linguists and experts in your field to protect and project your message.
                 </p>
               </div>
             </div>
             <div class='panels-wrapper'>
               <div class='row panels'>
+
+                <div class='col-sm-6 panel-item'>
+                  <a class='panel panel-big' href='services.html'>
+                    <div class='panel-icon'>
+                      <i class='fa fa-certificate icon'></i>
+                    </div>
+                    <div class='panel-body'>
+                      <h3 class='panel-title'> Bespoke premium service </h3>
+                      <p> You deal directly with a linguist to ensure the highest quality </p>
+                    </div>
+                  </a>
+                </div>
+
+                <div class='col-sm-6 panel-item'>
+                  <a class='panel panel-big' href='services.html'>
+                    <div class='panel-icon'>
+                      <i class='fa fa fa-trophy icon'></i>
+                    </div>
+                    <div class='panel-body'>
+                      <h3 class='panel-title'>The Best of the Best</h3>
+                      <p> Native translators who are members of recognised professional bodies </p>
+                    </div>
+                  </a>
+                </div>
 
                 <div class='col-sm-6 panel-item'>
                   <a class='panel panel-big' href='services.html'>
@@ -48,35 +72,15 @@
                   </a>
                 </div>
 
-              <div class='col-sm-6 panel-item'>
-                <a class='panel panel-big' href='services.html'>
-                  <div class='panel-icon'>
-                    <i class='fa fa fa-trophy icon'></i>
-                  </div>
-                  <div class='panel-body'>
-                    <h3 class='panel-title'>The Best of the Best</h3>
-                    <p> Native translators who are members of recognised professional bodies </p>
-                  </div>
-                </a>
-              </div>
-              <div class='col-sm-6 panel-item'>
-                <a class='panel panel-big' href='services.html'>
-                  <div class='panel-icon'>
-                    <i class='fa fa-certificate icon'></i>
-                  </div>
-                  <div class='panel-body'>
-                    <h3 class='panel-title'> Bespoke premium service </h3>
-                    <p> You deal directly with a linguist to ensure the highest quality </p>
-                  </div>
-                </a>
-              </div>
+
+
             </div>
             <div class='row'>
               <div class='col-sm-12'>
                 <div class='page-header page-header-with-icon'>
                   <i class='fa fa-certificate'></i>
                   <h2>
-                    Our top clients
+                    OUR CLIENTS INCLUDE
                     <small></small>
                   </h2>
                 </div>
