--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -30,7 +30,7 @@
           <div class='page-header page-header-with-icon'>
             <i class='fa fa-thumbs-up'></i>
             <h2>
-              Fields of expertise
+              <strong>Fields of expertise</strong>
             </h2>
           </div>
           <div class='icon-boxes icon-boxes-lg'>
@@ -106,7 +106,7 @@
             <div class='row'>
               <div class='col-sm-12'>
                 <p style="margin-top:100px" class='text-center'>
-               As Qualified Members of the Institute of Translation and Interpreting and the Chartered Institute of Linguists, our translators can also certify your translations as required. We also work with public notaries to notorise and legalise translations if needed.
+               As Qualified Members of the Institute of Translation and Interpreting and the Chartered Institute of Linguists, our translators can also certify your translations as required. We also work with public notaries to notarise and legalise translations if needed.
                 </p>
 
               </div>
@@ -118,7 +118,7 @@
         <div class='col-sm-12'>
           <div class='page-header page-header-with-icon'>
             <i class='fa fa-star'></i>
-            <h2>Our Pledge</h2>
+            <h2> <strong>Our Pledge</strong></h2>
             <p>
               We pride ourselves in offering a bespoke and premium translation service of the highest possible quality. This is our pledge to you:
             </p>
