--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,7 +20,7 @@
                       <i class='fa fa-phone'></i>
                     </div>
                     <div class='content'>
-                      <a href='tel:+012345678'>0044 (0)7769273612</a>
+                      <a href='tel:+012345678'>+44 2071 646 839?</a>
                     </div>
                   </div>
                   <div class='icon-box'>
@@ -53,8 +53,11 @@
                   2016
                 </p>
                 <div class='links'>
-                  <a class='btn btn-circle btn-medium-light btn-sm' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
-                    <i class='fa fa-linkedin text-dark'></i>
+                  <a class='btn btn-circle btn-medium-light btn-sm' href='https://twitter.com/AcademiaTransl8'>
+                    <i class='fa fa-facebook text-dark'></i>
+                  </a>
+                  <a class='btn btn-circle btn-medium-light btn-sm' href='https://www.facebook.com/Academia-Translations-107221282700059'>
+                    <i class='fa fa-twitter text-dark'></i>
                   </a>
                 </div>
               </div>
