--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
               <div class='row panels'>
 
                 <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='services.html'>
+                  <a class='panel panel-big' href='services.html#pledge'>
                     <div class='panel-icon'>
                       <i class='fa fa-certificate icon'></i>
                     </div>
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='services.html'>
+                  <a class='panel panel-big' href='services.html#pledge'>
                     <div class='panel-icon'>
                       <i class='fa fa fa-trophy icon'></i>
                     </div>
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='services.html'>
+                  <a class='panel panel-big' href='services.html#pledge'>
                     <div class='panel-icon'>
                       <i class='fa fa-check icon'></i>
                     </div>
@@ -61,7 +61,7 @@
                   </a>
                 </div>
                 <div class='col-sm-6 panel-item'>
-                  <a class='panel panel-big' href='services.html'>
+                  <a class='panel panel-big' href='services.html#pledge'>
                     <div class='panel-icon'>
                       <i class='fa fa-comment-o icon'></i>
                     </div>
