--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class='col-sm-9'>
-                          <p>Spanish is one of Latin's direct descendants and it may be argued that is just an ¨evolved¨ form of Latin with a different name. In this interview with TVE´s programme "Saca la Lengua", Olivia discusses the use of Latin terms in Spanish.
+                          <p>Spanish is one of Latin's direct descendants and it may be argued that is just an "evolved" form of Latin with a different name. In this interview with TVE's programme "Saca la Lengua", Olivia discusses the use of Latin terms in Spanish.
 
 
                            </p>
