--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -114,7 +114,7 @@
           </div>
         </div>
       </div>
-      <div class='row'>
+      <div class='row' id='pledge'>
         <div class='col-sm-12'>
           <div class='page-header page-header-with-icon'>
             <i class='fa fa-star'></i>
