--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -63,9 +63,6 @@
 
                     With a passion for detail, Olivia heads all translation projects and ensures that they are of the highest possible quality. <br/> <br/>
 
-                    Based in London and with a team of twenty regular translators, Olivia can take on all types of project, from large, long-term publications to urgent press releases with a turn around of a few hours. <br/> <br/>
-
-                    At Academia Translations, you deal directly with the linguist. We are unique in offering a truly bespoke and premium translation service.
                     </p>
 
                   </div>
@@ -73,9 +70,26 @@
               </div>
             </div>
 
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='row'>
+                  <div class='col-sm-12 text-center'>
 
+                      <img alt="" height="140" src='<%= image_path 'at/chartered.jpg'%>' />
+                      <img alt="" height="140" src='<%= image_path 'at/MITI.jpg'%>' />
 
+                  </div>
+                </div>
+              </div>
+            </div>
 
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='page-header'>
+
+                </div>
+              </div>
+            </div>
 
 
           </div>
@@ -97,7 +111,7 @@
                     </div>
 
                     <div class='col-sm-4'>
-                      <h3 class='name'>Rafael Perez</h3>
+                      <h3 class='name'>Rafael Pérez</h3>
                       <h4 class='position'>Associate Director</h4>
                       <p> BSc Hons, CMIOSH </p>
                       <div class='links'>
@@ -132,24 +146,34 @@
               </div>
             </div>
 
-
-
-
             <div class='row'>
               <div class='col-sm-12'>
                 <div class='page-header page-header-with-icon'>
                   <i class='fa fa-certificate'></i>
                 </div>
-                <div class='row'>
-                  <div class='col-sm-12 text-center'>
+              </div>
+            </div>
 
-                      <img alt="" height="140" src='<%= image_path 'at/chartered.jpg'%>' />
-                      <img alt="" height="140" src='<%= image_path 'at/MITI.jpg'%>' />
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='row'>
+                  <div class='col-sm-12'>
+                    <p class='lead lead-xs'>
+
+                    Based in London and with a team of twenty translators, Academia Translations can take on all types of project, from large, long-term publications to urgent press releases with a turn around of a few hours. <br/> <br/>
+
+                    At Academia Translations, you deal directly with the linguist. We are unique in offering a truly bespoke and premium translation service.
+                    </p>
 
                   </div>
                 </div>
               </div>
             </div>
+
+
+
+
+
 
           </div>
         </div>
