--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -33,12 +33,12 @@
                 <div class='text-boxes'>
                   <div class='row text-box text-box-title-above'>
                     <div class='col-sm-12'>
-                      <h2 class='title'><a href="/blog_single_post.html"> BBC Breakfast</a></h2>
+                      <h2> BBC Breakfast </h2>
                       <div class='toolbar'>
-                        <a class='btn btn-link' href='#'>
+                        <div class='btn btn-link'>
                           <i class='fa fa-calendar'></i>
                           <span>April 14, 2011</span>
-                        </a>
+                        </div>
                       </div>
                       <div class='row'>
                         <div class='col-sm-3'>
@@ -56,12 +56,12 @@
                   </div>
                   <div class='row text-box text-box-title-above'>
                     <div class='col-sm-12'>
-                      <h2 class='title'><a href="/blog_single_post.html">  AD 61: The Latin Tapes. </a></h2>
+                      <h2> AD 61: The Latin Tapes</h2>
                       <div class='toolbar'>
-                        <a class='btn btn-link' href='#'>
+                        <div class='btn btn-link'>
                           <i class='fa fa-calendar'></i>
                           <span>Sep 8, 2010</span>
-                        </a>
+                        </div>
                       </div>
                       <div class='row'>
                         <div class='col-sm-3'>
@@ -79,12 +79,12 @@
                   </div>
                   <div class='row text-box text-box-title-above'>
                     <div class='col-sm-12'>
-                      <h2 class='title'><a href="/blog_single_post.html"> UCB UK National Radio</a></h2>
+                      <h2> UCB UK National Radio</h2>
                       <div class='toolbar'>
-                        <a class='btn btn-link' href='#'>
+                        <div class='btn btn-link'>
                           <i class='fa fa-calendar'></i>
                           <span>May 3, 2013</span>
-                        </a>
+                        </div>
                       </div>
                       <div class='row'>
                         <div class='col-sm-3'>
@@ -108,12 +108,12 @@
                   </div>
                   <div class='row text-box text-box-title-above'>
                     <div class='col-sm-12'>
-                      <h2 class='title'><a href="/blog_single_post.html">TVE Spanish Television </a></h2>
+                      <h2>TVE Spanish Television</h2>
                       <div class='toolbar'>
-                        <a class='btn btn-link' href='#'>
+                        <div class='btn btn-link'>
                           <i class='fa fa-calendar'></i>
                           <span>Sept 1, 2015</span>
-                        </a>
+                        </div>
                       </div>
                       <div class='row'>
                         <div class='col-sm-3'>
