--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -17,8 +17,7 @@
           <div class='row'>
             <div class='col-sm-12'>
               <p class='lead lead-xs text-center'>
-              We provide expert translation services in the following languages: <br/>
-              <strong>  Spanish, Portuguese, French, Italian, Catalan, German  and Latin.  </strong>
+              We provide expert translation services in any language. The main languages we work with are <strong> Spanish, Portuguese, French, Italian, Catalan, German and Latin.</strong>
               </p>
 
             </div>
