--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,9 +10,11 @@
                       <i class='fa fa-map-marker'></i>
                     </div>
                     <div class='content'>
+                      <a>
                       47 South Street
                       <br>
                       Isleworth, London TW7 7AA
+                      </a>
                     </div>
                   </div>
                   <div class='icon-box'>
@@ -20,7 +22,7 @@
                       <i class='fa fa-phone'></i>
                     </div>
                     <div class='content'>
-                      <a href='tel:+012345678'>+44 2071 646 839?</a>
+                      <a href='tel:+012345678'>+44 2071 646 839</a>
                     </div>
                   </div>
                   <div class='icon-box'>
@@ -53,11 +55,14 @@
                   2016
                 </p>
                 <div class='links'>
+                  <a class='btn btn-circle btn-medium-light btn-sm' href='https://www.linkedin.com/company/academia-translations'>
+                    <i class='fa fa-linkedin text-dark'></i>
+                  </a>
                   <a class='btn btn-circle btn-medium-light btn-sm' href='https://twitter.com/AcademiaTransl8'>
-                    <i class='fa fa-facebook text-dark'></i>
+                    <i class='fa fa-twitter text-dark'></i>
                   </a>
                   <a class='btn btn-circle btn-medium-light btn-sm' href='https://www.facebook.com/Academia-Translations-107221282700059'>
-                    <i class='fa fa-twitter text-dark'></i>
+                    <i class='fa fa-facebook text-dark'></i>
                   </a>
                 </div>
               </div>
